--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
+    "@types/node": "^20.19.27",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   },
@@ -23,4 +24,3 @@
   "author": "",
   "license": "MIT"
 }
-
